@@ -222,7 +222,7 @@ This module lets the developer configure what happens in case of emergency.
 
 =head1 CONFIGURATION AND ENVIRONMENT
 
-We take our configuration from C<<$c->config->{'error_handler'}>>. If you do no
+We take our configuration from C<< $c->config->{'error_handler'} >>. If you do no
 configuration, the default is to look for the file 'root/static/error.html',
 and serve that as a static file. If all you want is to show a custom, static,
 error page, all you have to do is install the module and add it to your end
@@ -240,9 +240,9 @@ with atleast the following keys:
 Can be Log for builtin, or you can prefix it with a +, then
 we will use it as a fully qualified class name.
 
-A typical example of an action one might want is Email, which
-could for instance use L<Catalyst::View::Email> to send an email to
-the developers.
+The most excellent Stefan Profanter wrote
+L<Catalyst::Action::RenderView::ErrorHandler::Action::Email>, which lets you send
+templated emails on errors.
 
 =head4 id
 
@@ -268,7 +268,6 @@ in addition to rendering or sending something to the browser/client.
 The action is decided in that order.
 
 
-
 =head4 template
 
 Will be sent to your default_view for processing. Can use c.errors as needed
@@ -279,15 +278,16 @@ Will be read and served as a static file. This is the only option for fallback,
 since fallback will be used in case rendering a template failed for some reason.
 
 If the given string begins with an '/', we treat it as an absolute path and try
-to read it directly. If not, we pass it trough C<<$c->path_to()>> to get an
+to read it directly. If not, we pass it trough C<< $c->path_to() >> to get an
 absolute path to read from.
 
 =head2 EXAMPLE
 
     error_handler:
         actions:
-            # Note that Email is only provided here as an example, it does not
-            # exist.
+            # Check out
+            # L<Catalyst::Action::RenderView::ErrorHandler::Action::Email> if
+            # you want to send email from an action
             - type: Email
               id: email-devel
               to: andreas@example.com
@@ -322,7 +322,7 @@ It checks if there are errors, if not it it simply returns, assuming
 L<Catalyst::Action::RenderView> has handled the job. If there are errors
 we parse the configuration and try to build our handlers.
 
-Then it calls $self->handle.
+Then it calls C<< $self->handle >>.
 
 =head2 METHODS
 
@@ -336,7 +336,7 @@ templates, and then performs all actions (if any).
 =head3 render
 
 Given either a static file or a template, it will attempt to render
-it and send it to $context->res->body.
+it and send it to C<< $context->res->body >>.
 
 =head2 INHERITED METHODS
 
@@ -346,4 +346,13 @@ Inherited from L<Moose>
 
 =head1 DEPENDENCIES
 
-Catalyst::Action::RenderView
+L<Catalyst::Action::RenderView>
+
+=head1 SEE ALSO
+
+=over 4
+
+=item L<Catalyst::Action::RenderView::ErrorHandler::Action::Email>
+
+=back
+
